
Tools:
- New hatari_spinloop.py script for post-processing loop profile data.
  It can tell how many times loops were executed, how many times they
  spinned at minimum and maximum, at which VBL those happened, and what
  was the standard deviation of that.
- gst2ascii DATA/BSS debug symbol offsets are fixed while still providing
  support for the incorrect offsets used by older VBCC vlink
- Improved mingw cross-compilation support

Fixed demos :
- Shforstv.exe by Paulo Simoes (video, did not work in STE mode)
- Sommarhack 2011 Invitro by DHS (CPU/MFP, top border not removed)
- The World Is My Oyster - Convention Report Part by Aura (video, res=3)
- UMD 8730 by PHF (video, unused bits in STF color registers)
- It's A Girl 2 by Paradox (video, bottom border removal on a 60 Hz screen)
- 4-pixel plasma screen by TOS Crew (video, color change during only 4 cyles)
- HighResMode by Paradox (video, color changes in overscan med res at 60 Hz)
- The Union Demo (cpu, memory access, ikbd, protection)
- IKBD no jitter by Nyh (acia/video, use a VBL of 160240 cycles)

Fixed games :
- Reeking Rubber (by Nature), Falcon game
- Maze (by Martin Dennett & John Parker)
- Leavin' Teramis loader text (video address at $ffe100)


 Version 1.7.0 (2013-06-24):
 ---------------------------

Emulation:
- TT video emulation :
  - Extend the ST palette registers from 9bit to 12bit for ST modes
  - Duochrome mode instead of monochrome for ST High
  - Implementation of SampleHold in TT Hypermono video mode
- Sound changes :
  - Better model of the YM2149 noise generation (no noticeable audible impact)
  - Slightly better volume table (measured by Paulo Simoes on a real ST)
- CPU changes :
  - Added experimental MMU emulation for the 68030 mode
  - Handle the IACK cycles during an exception for HBL/VBL
- ACIA/IKBD changes :
  - Full implementation of the MC6850 ACIA, giving much more robust
    IKBD emulation
  - Better timings for all IKBD commands (measured on a real STF)