@@ -126,6 +126,7 @@ Tools:
   was the standard deviation of that.
 - gst2ascii DATA/BSS debug symbol offsets are fixed while still providing
   support for the incorrect offsets used by older VBCC vlink
+- hconsole.Main() takes now Hatari command line options as argument
 - Improved mingw cross-compilation support
 
 Fixed demos :
